--- a/templates/admin/admin-user/index.html.twig
+++ b/templates/admin/admin-user/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin/index.html.twig' %}
 
 {% block table %}
-<h3 class="icon fa-caret-right">&nbsp;SECTION : {{ section|upper }}</h3>
+<h3 class="icon fa-caret-right">&nbsp;SECTION : {{ section|upper|trans }}</h3>
 {% for message in app.flashes('message_admin') %}
   <div class="alert alert-success" role="alert">{{ message }}</div>
 {% endfor %}
@@ -13,8 +13,8 @@
           <div class="headers">
             {{ header }}
             <div class="sort-buttons">
-              <a href="{{ path('admin_useradmin_list', {'header': key , 'sorting': 'DESC'}) }}" class="icon fa-caret-up" title="Tri décroissant"></a>
-              <a href="{{ path('admin_useradmin_list', {'header': key , 'sorting': 'ASC'}) }}" class="icon fa-caret-down" title="Tri croissant"></a>
+              <a href="{{ path('admin_useradmin_list', {'header': key , 'sorting': 'DESC'}) }}" class="icon fa-caret-up" title="{{ 'Descending sorting'|trans }}"></a>
+              <a href="{{ path('admin_useradmin_list', {'header': key , 'sorting': 'ASC'}) }}" class="icon fa-caret-down" title="{{ 'Ascending sorting'|trans }}"></a>
             </div>
           </div>
         </th>
@@ -30,8 +30,8 @@
           <td>{{ adminuser.lastname }}</td>
           <td>{{ adminuser.email }}</td>
           <td style="display: flex;">
-            <a href="{{ path('admin_useradmin_edit', {'id':adminuser.id}) }}" class="btn-table btn-edit icon fa-pencil" role="button" title="Editer"></a>
-            <a href="{{ path('admin_useradmin_delete', {'id':adminuser.id}) }}" class="btn-table btn-delete icon fa-trash" role="button" title="Supprimer" onclick="return confirm('L\'administrateur {{ adminuser.firstname }} {{ adminuser.lastname }} va être définitivement supprimé, ce choix doit être confirmé ?')"></a>
+            <a href="{{ path('admin_useradmin_edit', {'id':adminuser.id}) }}" class="btn-table btn-edit icon fa-pencil" role="button" title="{{ 'Edit'|trans }}"></a>
+            <a href="{{ path('admin_useradmin_delete', {'id':adminuser.id}) }}" class="btn-table btn-delete icon fa-trash" role="button" title="{{ 'Delete'|trans }}" onclick="return confirm('{{ adminuser.firstname }} {{ adminuser.lastname }} {{ 'will be definitely deleted, this choice must be confirmed ?'|trans }}')"></a>
           </td>
         </tr>
       {% endif %}
@@ -42,6 +42,6 @@
   {{ knp_pagination_render(adminusers) }}
 {% endif %}
 <div class="button-right">
-  <a href="{{ path('admin_app_register') }}" class="btn-lg btn-default icon fa-plus">&nbsp;Ajouter</a>
+  <a href="{{ path('admin_app_register') }}" class="btn-lg btn-default icon fa-plus">&nbsp;{% trans %}Add{% endtrans %}</a>
 </div>
 {% endblock %}
