--- a/templates/registration/adminregister.html.twig
+++ b/templates/registration/adminregister.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin/index.html.twig' %}
 
 {% block table %}
-{{ include ('admin/admin-user/_form.html.twig', { btncaption : 'Créer'}) }}
+{{ include ('admin/admin-user/_form.html.twig', { btncaption : 'Create'|trans}) }}
 {% endblock %}
