--- a/templates/registration/userregister.html.twig
+++ b/templates/registration/userregister.html.twig
@@ -14,16 +14,16 @@
 							<div class="col-md-8 col-md-offset-1 text-center js-fullheight slider-text">
 								<div class="slider-text-inner">
                   <div class="global-form">
-                    <h1 class="text-green">Register</h1>
+                    <h1 class="text-green">{% trans %}Register{% endtrans %}</h1>
                     {% for flashError in app.flashes('verify_email_error') %}
                       <div class="alert alert-danger" role="alert">{{ flashError }}</div>
                     {% endfor %}
                     {{ form_start(registrationForm) }}
                       <div class="form-group">
-                        {{ form_row(registrationForm.firstname) }}
+                        {{ form_row(registrationForm.firstname, {label: 'Firstname'|trans}) }}
                       </div>
                       <div class="form-group">
-                        {{ form_row(registrationForm.lastname) }}
+                        {{ form_row(registrationForm.lastname, {label: 'Lastname'|trans}) }}
                       </div>
                       <div class="form-group">
                         {{ form_label(registrationForm.email) }}
@@ -31,7 +31,7 @@
                         {{ form_widget(registrationForm.email) }}
                       </div>
                       <div class="form-group">
-                        {{ form_row(registrationForm.plainPassword, {label: 'Mot de passe'}) }}
+                        {{ form_row(registrationForm.plainPassword, {label: 'Password'|trans}) }}
                       </div>
                       <div class="form-group">
                         <div class="checkbox-group">
@@ -40,7 +40,7 @@
                         </div>
                       </div>
                       <div class="button-right">
-                        <button type="submit" class="btn btn-primary">Register</button>
+                        <button type="submit" class="btn btn-primary">{% trans %}Register{% endtrans %}</button>
                       </div>
                     {{ form_end(registrationForm) }}
 								  </div>
