--- a/templates/security/userlogin.html.twig
+++ b/templates/security/userlogin.html.twig
@@ -21,19 +21,19 @@
 
                       {% if app.user %}
                         <div class="mb-3">
-                          You are logged in as
+                          {% trans %}You are logged in as{% endtrans %}
                           {{ app.user.username }},
-                          <a href="{{ path('app_logout') }}">Logout</a>
+                          <a href="{{ path('app_logout') }}">{% trans %}Logout{% endtrans %}</a>
                         </div>
                       {% endif %}
 
-                      <h1 class="h3 mb-3 font-weight-normal text-green">Please sign in</h1>
+                      <h1 class="h3 mb-3 font-weight-normal text-green">{% trans %}Please sign in{% endtrans %}</h1>
                       <div class="form-group">
                         <label for="inputEmail">Email</label>
                         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
                       </div>
                       <div class="form-group">
-                        <label for="inputPassword">Password</label>
+                        <label for="inputPassword">{% trans %}Password{% endtrans %}</label>
                         <input type="password" name="password" id="inputPassword" class="form-control" required>
                         <input
                         type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
@@ -41,11 +41,11 @@
                       <div class="form-group">
                         <div class="checkbox-group">
                           <input type="checkbox" name="_remember_me"> 
-                          <label>Remember me</label>
+                          <label>{% trans %}Remember me{% endtrans %}</label>
                         </div>
                       </div>
                       <div class="button-right">
-                        <button class="btn btn-primary" type="submit">Sign in</button>
+                        <button class="btn btn-primary" type="submit">{% trans %}Sign in{% endtrans %}</button>
                       </div>
                     </form>
 								  </div>
