--- a/templates/admin/admin-user/_form.html.twig
+++ b/templates/admin/admin-user/_form.html.twig
@@ -1,5 +1,5 @@
 {% block table %}
-	<h3 class="icon fa-caret-right">&nbsp;SECTION : {{ section|upper }}</h3>
+  {% include "dashboard/_sectiontitle.html.twig" %}
   <div class="row text-left">
     <div class="col-md-8">
       {% for flashError in app.flashes('verify_email_error') %}
