--- a/templates/admin/admin-user/edit.html.twig
+++ b/templates/admin/admin-user/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends "admin/index.html.twig" %}
+{% extends "dashboard/index.html.twig" %}
 
 {% block table %}
   {{ include ('admin/admin-user/_form.html.twig', { btncaption : 'Save'|trans}) }}
