--- a/public/assets/sass/bootstrap.css
+++ b/public/assets/sass/bootstrap.css
@@ -2712,6 +2712,7 @@ th {
   width: 100%;
   max-width: 100%;
   margin-bottom: 20px;
+  font-size: 14px !important;
 }
 
 .table > thead > tr > th,
@@ -2724,6 +2725,7 @@ th {
   line-height: 1.42857;
   vertical-align: top;
   border-top: 1px solid #ddd;
+  font-size: 14px !important;
 }
 
 .table > thead > tr > th {
