--- a/public/assets/sass/bootstrap/_tables.scss
+++ b/public/assets/sass/bootstrap/_tables.scss
@@ -23,6 +23,7 @@ th {
   width: 100%;
   max-width: 100%;
   margin-bottom: $line-height-computed;
+  font-size: 14px!important;
   // Cells
   > thead,
   > tbody,
@@ -34,6 +35,7 @@ th {
         line-height: $line-height-base;
         vertical-align: top;
         border-top: 1px solid $table-border-color;
+        font-size: 14px!important;
       }
     }
   }
