--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'admin/index.html.twig' %}
+{% extends 'dashboard/index.html.twig' %}
 
 {% block table %}
 <div class="table-wrapper">
-<h3 class="icon fa-caret-right">&nbsp;SECTION : {{ section|upper }}</h3>
+{% include "dashboard/_sectiontitle.html.twig" %}
 {% for message in app.flashes('message_admin') %}
   <div class="alert alert-success" role="alert">{{ message }}</div>
 {% endfor %}
