--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -2072,3 +2072,10 @@ input[type="checkbox"]:checked {
 		}
 	}
 }
+// table font-size adjust
+.table {
+	font-size: 14px!important;
+}
+a.icon.fa-envelope-open-o.btn-message {
+	color: #848484;
+}
