--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,6 +49,7 @@
       <script src="{{ asset('assets/js/classie.js') }}"></script>
       <script src="{{ asset('assets/js/selectFx.js') }}"></script>
       <script src="{{ asset('assets/js/main.js') }}"></script>
+      <script src="{{ asset('assets/js/message.js') }}"></script>
     {% endblock %}
   </body>
 </html>
