--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,7 @@
     <link rel="shortcut icon" href="favicon.ico"/>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300' rel='stylesheet' type='text/css'/>
     {% block stylesheets %}
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" />
       <link rel="stylesheet" href="{{ asset('assets/css/animate.css') }}"/>
       <link rel="stylesheet" href="{{ asset('assets/css/icomoon.css') }}"/>
       <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.css') }}"/>
@@ -48,6 +49,8 @@
       <script src="{{ asset('assets/js/bootstrap-datepicker.min.js') }}"></script>
       <script src="{{ asset('assets/js/classie.js') }}"></script>
       <script src="{{ asset('assets/js/selectFx.js') }}"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js" integrity="sha512-RtZU3AyMVArmHLiW0suEZ9McadTdegwbgtiQl5Qqo9kunkVg1ofwueXD8/8wv3Af8jkME3DDe3yLfR8HSJfT2g==" crossorigin="anonymous"></script>
+	    <script>$('select#message_form_recipient').select2({ placeholder: "{{'--Recipient list--'|trans}}" })</script>
       <script src="{{ asset('assets/js/main.js') }}"></script>
       <script src="{{ asset('assets/js/message.js') }}"></script>
     {% endblock %}
