--- a/templates/dashboard/_navigation.html.twig
+++ b/templates/dashboard/_navigation.html.twig
@@ -4,7 +4,7 @@
   <a href="" class="btn btn-primary">Documents</a>
 {% endif %}
 {% if not is_granted('ROLE_ADMIN') and is_granted('ROLE_AGENT') %}
-  <a href="{{ path('message_agent_list') }}" class="btn btn-primary">Messages</a>
+  <a href="{{ path('message_list') }}" class="btn btn-primary">Messages</a>
   <a href="" class="btn btn-primary">Documents</a>
 {% endif %}
 
