--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -232,7 +232,7 @@ figure {
 	}
 }
 #fh5co-hero {
-	// min-height: 700px;
+	min-height: 700px;
 	background: $brand-white url(../images/loader.gif) no-repeat center center;
 	position: relative;
 	.overlay{
@@ -296,7 +296,7 @@ figure {
 			> .slider-text-inner {
 				display: table-cell;
 				vertical-align: middle;
-				// min-height: 700px;
+				min-height: 700px;
 				h1, h2 {
 					margin: 0;
 					padding: 0;
@@ -1924,6 +1924,10 @@ input[type="checkbox"]:checked {
 }
 .main-bg-agent {
 	background: url(../images/properties/home_05.jpg) center/cover;
+	height: 490px;
+}
+.main-bg-owner {
+	background: url(../images/properties/home_08.jpg) center/cover;
 	height: 490px;
 }
 .admin {
