--- a/templates/contact/email.html.twig
+++ b/templates/contact/email.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}Message of{% endtrans %} : LocationImmo</h2>
 <hr>
-<h3><strong>{% trans %}Nom{% endtrans %} : </strong>{{ firstname }} {{ lastname }}</h3>
+<h3><strong>{% trans %}Name{% endtrans %} : </strong>{{ firstname }} {{ lastname }}</h3>
 <h3><strong>Email : </strong>{{ mail }}</h3>
 <hr>
 <h4><strong>{% trans %}Subject{% endtrans %} : </strong>{{ subject }}</h4>
