--- a/templates/dashboard/_navigation.html.twig
+++ b/templates/dashboard/_navigation.html.twig
@@ -7,4 +7,13 @@
   <a href="{{ path('message_list') }}" class="btn btn-primary">Messages</a>
   <a href="" class="btn btn-primary">Documents</a>
 {% endif %}
+{% if not is_granted('ROLE_ADMIN') and is_granted('ROLE_OWNER') %}
+  <a href="{{ path('message_list') }}" class="btn btn-primary">Messages</a>
+{% endif %}
+{% if not is_granted('ROLE_ADMIN') and is_granted('ROLE_LEASEOWNER') %}
+  <a href="{{ path('message_list') }}" class="btn btn-primary">Messages</a>
+{% endif %}
+{% if not is_granted('ROLE_ADMIN') and is_granted('ROLE_TENANT') %}
+  <a href="{{ path('message_list') }}" class="btn btn-primary">Messages</a>
+{% endif %}
 
