--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -232,7 +232,7 @@ figure {
 	}
 }
 #fh5co-hero {
-	min-height: 700px;
+	// min-height: 700px;
 	background: $brand-white url(../images/loader.gif) no-repeat center center;
 	position: relative;
 	.overlay{
@@ -296,7 +296,7 @@ figure {
 			> .slider-text-inner {
 				display: table-cell;
 				vertical-align: middle;
-				min-height: 700px;
+				// min-height: 700px;
 				h1, h2 {
 					margin: 0;
 					padding: 0;
