--- a/templates/dashboard/_maintitle.html.twig
+++ b/templates/dashboard/_maintitle.html.twig
@@ -7,4 +7,10 @@
 {% if not is_granted('ROLE_ADMIN') and is_granted('ROLE_OWNER') %}
   <h1 class="h3 mb-3 font-weight-normal text-green">{% trans %}Owner centre{% endtrans %}</h1>
 {% endif %}
+{% if not is_granted('ROLE_ADMIN') and is_granted('ROLE_LEASEOWNER') %}
+  <h1 class="h3 mb-3 font-weight-normal text-green">{% trans %}Lease owner centre{% endtrans %}</h1>
+{% endif %}
+{% if not is_granted('ROLE_ADMIN') and is_granted('ROLE_TENANT') %}
+  <h1 class="h3 mb-3 font-weight-normal text-green">{% trans %}Tenant centre{% endtrans %}</h1>
+{% endif %}
 
