--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -1957,7 +1957,7 @@ input[type="checkbox"]:checked {
 		}
 	}
 }
-@media (max-width: $screen-sm-max) {
+@media (max-width: $screen-md-max) {
 	.aside-buttons {
 		height: 100%;
 		&>a {
@@ -2084,7 +2084,7 @@ input[type="checkbox"]:checked {
 a.icon.fa-envelope-open-o.btn-message {
 	color: #848484;
 }
-.btn-message, .btn-delet-message {
+.btn-message, .btn-delete-message {
 	cursor:pointer;
 }
 // edit message
@@ -2124,4 +2124,136 @@ li.select2-selection__choice {
 // adjust padding button
 button {
 	padding: 10px 15px!important;
+}
+
+// switch buttons
+.card-firstpage, .card-active {
+	margin: 0 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: start;
+	line-height: 1;
+
+	/* The switch - the box around the slider */
+	& .switch {
+		position: relative;
+		display: inline-block;
+		width: 30px;
+		height: 17px;
+		margin-bottom: 0;
+	}
+
+	/* Hide default HTML checkbox */
+	& .switch input {
+		opacity: 0;
+		width: 0;
+		height: 0;
+	}
+
+	/* The slider */
+	& .slider {
+		position: absolute;
+		cursor: pointer;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: #ccc;
+		transition: .4s;
+	}
+
+	& .slider:before {
+		position: absolute;
+		content: "";
+		height: 13px;
+		width: 13px;
+		left: 2px;
+		bottom: 2px;
+		background-color: white;
+		transition: .4s;
+	}
+
+	& input:checked + .slider {
+		background-color: #5cb85c;
+	}
+
+	& input:focus + .slider {
+		box-shadow: 0 0 1px #5cb85c;
+	}
+
+	& input:checked + .slider:before {
+		transform: translateX(13px);
+	}
+
+	/* Rounded sliders */
+	& .slider.round {
+		border-radius: 17px;
+	}
+
+	& .slider.round:before {
+		border-radius: 50%;
+	}
+}
+
+// announce form
+#announce_form_type {
+	display: grid;
+	grid-template: repeat(2, 20px) / 18px 1fr;
+	label, input {
+		display: flex;
+		align-items: center;
+		font-size: 14px;
+	}
+	input {
+		margin: 0;
+	}
+}
+#announce_form_owner, #announce_form_tenant {
+	height: 42px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	width: 100%;
+	outline: none;
+}
+.checkbox-group-announce-form {
+	display: grid;
+  grid-template: 1fr / 20px 1fr 20px 1fr;
+	label, input {
+		display: flex;
+		align-items: center;
+	}
+	input {
+		margin: 4px 0;
+	}
+}
+// radio button perso
+input[type="radio"] {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	border-radius: 50%;
+	outline: none;
+	border: 0.5px solid #ccc;
+	height: 15px;
+	width: 15px;
+	background: $brand-white;
+}
+input[type="radio"]:focus {
+	outline: none;
+}
+input[type="radio"]:checked {
+	border: 0.5px solid $brand-primary;
+  position: relative;
+  &::before {
+    content: '';
+    display: block;
+    background-color: $brand-primary;
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+    position: absolute;
+		top: 50%;
+    left: 50%;
+    transform: translate(-5px, -5px);
+	}
 }
