--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,7 +52,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js" integrity="sha512-RtZU3AyMVArmHLiW0suEZ9McadTdegwbgtiQl5Qqo9kunkVg1ofwueXD8/8wv3Af8jkME3DDe3yLfR8HSJfT2g==" crossorigin="anonymous"></script>
 	    <script>$('select#message_form_recipient').select2({ placeholder: "{{'--Recipient list--'|trans}}" })</script>
       <script src="{{ asset('assets/js/main.js') }}"></script>
-      <script src="{{ asset('assets/js/message.js') }}"></script>
+      <script src="{{ asset('assets/js/ajax.js') }}"></script>
     {% endblock %}
   </body>
 </html>
