--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -16,10 +16,10 @@
                   <div class="admin">
 										{% include "dashboard/_maintitle.html.twig" %}
                     <div class="row">
-                      <div class="col-md-3 aside-buttons">
+                      <div class="col-lg-3 aside-buttons">
 												{% include "dashboard/_navigation.html.twig" %}
                       </div>
-                      <div class="col-sm-12 col-md-9">
+                      <div class="col-sm-12 col-lg-9">
 												{% block table %}
 													<h3 class="icon fa-caret-right">&nbsp;{% trans %}Welcome{% endtrans %} {{ is_granted('ROLE_USER') ? app.user.firstname : '' }}</h3>
 													{% include "dashboard/_mainbg.html.twig" %}
