--- a/templates/include/header.html.twig
+++ b/templates/include/header.html.twig
@@ -11,7 +11,7 @@
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li class="{{ active == 'home' ? 'active' : '' }}">
 								<a href="{{ path('home') }}">{% trans %}Home{% endtrans %}</a></li>
-							<li class="{{ active == 'announce' ? 'active' : '' }}"><a href="{{ path('announce_list') }}">{% trans %}Properties{% endtrans %}</a></li>
+							<li class="{{ active == 'announce' ? 'active' : '' }}"><a href="{{ path('announce_home') }}">{% trans %}Properties{% endtrans %}</a></li>
 							<li class="{{ active == 'contact' ? 'active' : '' }}"><a href="{{ path('contact_home') }}">Contact</a></li>
 							{% include "include/_myspacenav.html.twig" %}
 							{% for locale in locales %}
